--- a/interfaces/Config/templates/config_server.tmpl
+++ b/interfaces/Config/templates/config_server.tmpl
@@ -140,7 +140,7 @@
 <!--#import datetime#-->
 <!--#def show_date_selector($id)#-->
     <!--#set $month_names = [$T('January'), $T('February'), $T('March'), $T('April'), $T('May'), $T('June'), $T('July'), $T('August'), $T('September'), $T('October'), $T('November'), $T('December')] #-->
-    <select class="ct-axis-title chart-selector" name="chart-selector-${id}" id="chart-selector-${id}" data-id="${id}">
+    <select class="chart-selector" name="chart-selector-${id}" id="chart-selector-${id}" data-id="${id}">
         <!--#for $i in range(12)#-->
             <!--#set cur_date = (datetime.date.today() - datetime.timedelta($i*365/12))#-->
             <option value="<!--#echo '%d-%02d' % ($cur_date.year, $cur_date.month)#-->">$month_names[$cur_date.month-1] $cur_date.year</option>
@@ -301,6 +301,9 @@
 
 <script type="text/javascript">
     function showChart(server_id, month) {
+        // This month
+        var thisDay = new Date()
+
         // What month are we doing?
         if(month) {
             var inputDate = new Date(month+'-01')
@@ -332,10 +335,13 @@
             if(dateCheck in serverData[server_id]) {
                 data['series'][0].push(serverData[server_id][dateCheck])
                 largestVal = Math.max(largestVal, serverData[server_id][dateCheck])
+            } else if(thisDay.getMonth() == baseDate.getMonth() && thisDay.getDate() < i) {
+                data['series'][0].push(NaN)
             } else {
                 data['series'][0].push(0)
             }
         }
+        console.log(data['series'][0])
 
         // Check if we should shrink the Y-axis values
         var devideBy = 1024
@@ -363,7 +369,7 @@
         chart.on('created', function(context) {
             context.svg.elem('rect', {
                 x: context.chartRect.x1,
-                y: context.chartRect.y2+1,
+                y: context.chartRect.y2,
                 width: context.chartRect.width(),
                 height: context.chartRect.height()+2,
                 fill: 'none',
