Schedule to deprecate Categories setting for Servers in next release
This option only gives headaches because users do not use it correctly or edge cases where downloads stall. 
If users report that they really want to keep this option, we can of course consider it.

--- a/interfaces/Config/templates/config_server.tmpl
+++ b/interfaces/Config/templates/config_server.tmpl
@@ -258,7 +258,7 @@
                         </option>
                     <!--#end for#-->
                     </select>
-                    <span class="desc">$T('srv-explain-categories')</span>
+                    <span class="desc">$T('srv-explain-categories')<br><span class="label label-warning">$T('warning').upper()</span> <strong>This option is scheduled to be removed in the next release of SABnzbd.</strong></span>
                     <div class="alert alert-info alert-no-category">
                         <span class="glyphicon glyphicon-info-sign"></span>
                         $T('srv-explain-no-categories')
